--- a/s2.css
+++ b/s2.css
@@ -14,6 +14,7 @@
 .-theme-action {color:#fff !important; background-color:#000000 !important}
 
 .-theme {color:#fff !important; background-color:#000000 !important}
+.-theme111 {color:#fff !important; background-color:red !important}
 .-text-theme {color:#000000 !important}
 .-border-theme {border-color:#000000 !important}
 
